--- a/header.html
+++ b/header.html
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
+
 <style>
 header {
     display: grid;
@@ -84,6 +89,19 @@ nav.show {
     transform: rotate(45deg) translate(-4px, -8px);
 }
 
+.dropdown-content {
+    display: none;
+
+
+}
+
+.dropdown-content a {
+display: none;
+}
+
+
+
+
 @media screen and (min-width:768px) {
     .burger {
         display: none;
@@ -119,6 +137,40 @@ nav.show {
     li:hover{
         color: darkgray;
     }
+
+
+
+.dropdown {
+    float:inherit;
+    overflow:inherit;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+
 }
 
 </style>
@@ -133,16 +185,31 @@ nav.show {
         </button>
     </div>
 
+
+
+
+
     <header>
         <!--Navigationsbaren på laptop-->
         <nav>
             <ul>
-                <a href="#">
-                    <li>PORTFOLIO</li>
-                </a>
-                <a href="#">
+
+
+                    <div class="dropdown">
+     <li>PORTFOLIO <i class="fa fa-caret-down"></i>
+     </li>
+
+              <div class="dropdown-content">
+                <a href="#">Event Styling</a>
+                <a href="#">Møbel indretning</a>
+                  </div>
+                </div>
+
+                  <a href="#">
                     <li>PRODUCTS</li>
+
                 </a>
+
                 <img class="nav_logo" src="logo_another.svg" alt="nav_logo">
 
                 <a href="">
