--- a/om.html
+++ b/om.html
@@ -29,7 +29,7 @@
 
         </div>
 
-        <div class="column_2" style="background-color: #E9B935">
+        <div class="column_2">
         <h1>Anette Thyrsted</h1>
            <p>“Mine opgaver er sjældent ens, det holder mig til ilden og
             kræver konstant forandringsparathed. Og jeg er vild med det!”    </p>
