--- a/header.html
+++ b/header.html
@@ -34,13 +34,13 @@ ul {
 }
 
 .nav_logo {
-    width: 30px;
+    width: 250px;
     display: none;
 
 }
 
 .nav_burger_logo {
-    width: 130px;
+    width: 240px;
 }
 
 li {
@@ -115,7 +115,7 @@ display: none;
 
 
     .nav_logo {
-        width: 130px;
+
         display: block;
         justify-self: center;
     }
@@ -141,8 +141,8 @@ display: none;
 
 
 .dropdown {
-    float:inherit;
-    overflow:inherit;
+    float: inherit;
+    overflow: inherit;
 
 }
 
@@ -177,17 +177,13 @@ display: none;
 
 
        <div class="burgermenu">
-        <img class="nav_burger_logo" src="logo_another.svg" alt="nav_logo">
+        <img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo">
         <button class="burger">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
         </button>
     </div>
-
-
-
-
 
     <header>
         <!--Navigationsbaren på laptop-->
@@ -210,7 +206,7 @@ display: none;
 
                 </a>
 
-                <img class="nav_logo" src="logo_another.svg" alt="nav_logo">
+                <img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo">
 
                 <a href="">
                     <li>THE STYLIST</li>
