--- a/eventstyling.html
+++ b/eventstyling.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/eventstyling.css" type="text/css">
+    <link rel="stylesheet" href="eventstyling.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Event Styling</title>
 </head>
@@ -75,6 +75,11 @@
                 let klon = eventTemplate.cloneNode(true).content;
                 klon.querySelector("[data-title1]").textContent = events.title.rendered;
                 klon.querySelector("img").src = events.acf.image;
+                //single
+                klon.querySelector("img").addEventListener("click", ()=>{
+                    window.location.href = "single_eventstyling.html?heading" + events.heading;
+                })
+                //singleslut
                 eventContainer.appendChild(klon);
             })
         }
