--- a/eventstyling.html
+++ b/eventstyling.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="eventstyling.css" type="text/css">
+    <link rel="stylesheet" href="CSS/eventstyling.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Event Styling</title>
 </head>
@@ -77,12 +77,15 @@
                 klon.querySelector("img").src = events.acf.image;
                 //single
                 klon.querySelector("img").addEventListener("click", ()=>{
-                    window.location.href = "single_eventstyling.html?heading" + events.heading;
+                    window.location.href = "single_eventstyling.html?id=" + events.id;
                 })
                 //singleslut
                 eventContainer.appendChild(klon);
             })
         }
+
+
+
     </script>
 
 </body>
