--- a/single_eventstyling.html
+++ b/single_eventstyling.html
@@ -1,46 +1,131 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--    <link rel="stylesheet" href="CSS/sinlge_eventstyling.css" type="text/css">-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Event Styling (s)</title>
+    <title>Style Editor </title>
+
+     <style>
+        html {
+            margin: 0;
+        }
+        header {
+        background-color:rgba(250, 147, 9, 0.31);
+        }
+        body {
+            font-family: , sans-serif;
+            margin: 0 auto;
+            text-align: center;
+        }
+        h1 {
+            text-transform: capitalize;
+            font-family: sans-serif;
+            text-align: center;
+        }
+        h3 {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 50px;
+            margin: 0;
+            color: white;
+        }
+        nav {
+            text-align: center;
+        }
+       .menu-item {
+            text-transform: uppercase;
+            font-family: sans-serif;
+            background-color: rgba(250, 147, 9, 0.76);
+            color: white;
+        }
+        .button {}
+        .retContainer {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        @media only screen and (max-width: 1229px) {
+            .retContainer {
+                grid-template-columns: 1fr 1fr;
+            }
+        }
+        @media only screen and (max-width: 830px) {
+            .ret img {
+                width: 100%
+            }
+            .retContainer {
+                grid-template-columns: 1fr;
+            }
+        }
+        @media only screen and (max-width: 425px) {
+            .ret img {
+                width: 100%
+            }
+            .retContainer {
+                grid-template-columns: 1fr;
+            }
+        }
+        ;
+    </style>
 </head>
 
 <body>
-   <main class="container">
-       <section class="data_container">
-           <article>
-               <h1 class="heading_events" data-title1></h1>
-               <img src="" alt="">
-           </article>
-       </section>
-   </main>
 
-   <script>
-       document.addEventListener("DOMContentLoaded", getJson);
+    <main class="eventContainer">
+
+        <section class="singleContainer">
+            <article class="event">
+             <h2 class="data-navn"></h2>
+             <img class="data-billede"  src="" alt="">
+            <p class="data-langbeskrivelse" ></p>
+
+            </article>
+        </section>
+    </main>
+
+    <script>
+
 
         let urlParams = new URLSearchParams(window.location.search);
-       let heading = urlParams.get("heading");
-       console.log(heading);
-
-       async function getJson(){
-           console.log("jsonDownloaded");
-           let dataJson = await fetch("http://milleprintzlau.dk/2.semester/styleeditor_site/wordpress/wp-json/wp/v2/event/?per_page=100");
-           events = await dataJson.json();
-           visEvents();
-       }
-
-       function visEvents(){
-           let klon = document.querySelector(".data_container");
-           events.forEach(event =>{
-               klon.querySelector("[data-title1]").textContent = events.title.rendered;
-                klon.querySelector("img").src = events.acf.image;
-           })
-       }
+        let id = urlParams.get("id");
+        let event ={};
+        let dest = document.querySelector(".eventContainer");
 
 
+        document.addEventListener("DOMContentLoaded", hentJson);
+        async function hentJson() {
+        let dataJson = await fetch("http://milleprintzlau.dk/2.semester/styleeditor_site/wordpress/wp-json/wp/v2/event/"+id);
+        event= await dataJson.json();
+
+       console.log(",jhmmj",event)
+
+           visEvent();
+        }
+
+
+
+
+
+        function visEvent() {
+                console.log(event, event.title)
+        let display = document.querySelector(".singleContainer");
+               console.log(",jhmmj",event)
+
+
+
+
+
+
+             dest.querySelector(".data-navn").textContent = event.title.rendered;
+             dest.querySelector(".data-billede").src = event.acf.image;
+            dest.querySelector(".data-langbeskrivelse").innerHTML = event.langbeskrivelse;
+
+
+
+        }
     </script>
+
+
+
 </body>
 </html>
