--- a/webshop.html
+++ b/webshop.html
@@ -8,15 +8,169 @@
 
     <link rel="stylesheet" href="CSS/webshop.css">
     <link href="https://fonts.googleapis.com/css?family=Heebo:300,400" rel="stylesheet">
+
+
     <style>
-        main{
-           column-count: 2;
+
+        h1{
+            font-family: 'Heebo', sans-serif;
+          font-weight: 300;
+          color: rgba(0, 0, 0, 0.56);
+          text-decoration: none;
+        font-size: 1.2em;
 
         }
 
-        #sorteringsknapper{
+    p{
+        font-family: 'Heebo', sans-serif;
+        font-weight: 300;
+        color: rgba(0, 0, 0, 0.56);
+        text-decoration: none;
+        font-size: 0.8em;
+        }
+
+    hr{
+            background-color: #0B584D;
+            padding: 1px;
+            width: 30%;
+            position: absolute;
+
+            margin-top: 20px;
+
+
+        }
+
+
+    .image{
+
+              width: 90%;
+              margin-top: 30px;
+            margin-left: 10px;
+
+          }
+
+
+/*   NAVIGATION*/
+
+
+
+    .column1 {
+    float: left;
+    width: 50%;
+    margin-bottom: 50px;
+    font-size: 1.3em;
+
+
+
+}
+
+
+    .row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+    #sorteringsknapper{
             background-color: #E6C9C7;
+            height: 700px;
+            width: 200px;
+
         }
+
+    .menu_item{
+
+        font-family: 'Heebo', sans-serif;
+        font-weight: 300;
+        color: rgba(0, 0, 0, 0.56);
+        background-color: #E6C9C7;
+
+        font-size: 1.2em;
+            border: none;
+            display: block;
+            margin-bottom: 0.4em;
+
+        }
+
+    .menu_item:hover{
+            text-decoration: underline;
+        }
+
+
+    /* PRODUKTER*/
+
+        .vare_container{
+            font-family: 'Heebo', sans-serif;
+             background-color: red;
+            display: inline-table;
+
+        }
+
+
+            .column {
+            float: left;
+            width: 50%;
+            margin-bottom: 50px;
+            font-size: 1.3em;
+            margin-top: 20px;
+
+
+}
+
+
+        .pris{
+
+          font-weight: 300;
+          color: rgba(0, 0, 0, 0.56);
+          text-decoration: none;
+        font-size: 1.2em;
+            text-align: center;
+        }
+
+        .kob{
+            text-decoration: none;
+        }
+
+
+        .kobet{
+        font-family: 'Heebo', sans-serif;
+        font-weight: 300;
+        font-size: 1.2em;
+        text-decoration: none;
+
+         margin: 0 auto;
+
+            background-color: white;
+        color: rgba(0, 0, 0, 0.56);
+          border: 1px solid rgba(0, 0, 0, 0.56) ;
+
+
+
+            display: block;
+            margin-bottom: 0.4em;
+        }
+
+        .title{
+            text-align: center;
+             font-family: 'Heebo', sans-serif;
+        font-weight: 600;
+
+
+        color: black;
+        text-decoration: none;
+        font-size: 0.8em;
+        }
+
+
+
+
+
+
+
+
+
+
+
     </style>
 
 
@@ -29,6 +183,7 @@
     <main>
 
 <!--       Section til indhold af modale vinduet, når man trykker på en vare-->
+
 
         <section id="modal">
             <div id="modal_content">
@@ -45,86 +200,112 @@
         </section>
 
 
-<!--       section til sorteringsklapperne-->
+<!--    section til sorteringsklapperne-->
+<div class="row">
 
+       <div class="column1">
         <section id="sorteringsknapper">
-            <h1></h1>
+            <h1>VÆLG KATAGORI</h1>
             <div class="knapper">
-                <button class="menu_item" data_kategori="alle">Alle</button>
-                <button class="menu_item" data_kategori="Musik">Glas</button>
-                <button class="menu_item" data_kategori="Film">Tallerkner</button>
-                <button class="menu_item" data_kategori="Ord">Rodebunke</button>
+                <button class="menu_item" data_kategori="ALLE">Alle</button>
+                <button class="menu_item" data_kategori="VINTAGE GLAS">GLAS</button>
+                <button class="menu_item" data_kategori="TALLERKENER">TALLERKNER</button>
+                <button class="menu_item" data_kategori="RODEBUNKEN">RODEBUNKE</button>
+
 
             </div>
+
+            <hr>
+            <br>
+            <br>
+            <p>Shoppen foregår over mail, det betyder at køb knappen henviser til Anettes Thyrsteds mail. Skriv til Anette hvis du gerne vil købe varen.</p>
         </section>
 
+</div>
+
 <!--        Template til vare container. Det er hver af varene der er pakket ind i en vare container-->
+
+          <div class="column">
+
+
+
         <section class="vare"></section>
         <template class="vare_template">
             <article class="vare_container">
-                <div class="title"></div>
-                <div class="pris"></div>
-                <a class="kob" href="" target="_blank"><button class="kob">Køb</button></a>
                 <div class="genre"></div>
+
+
                 <img class="image" src="" alt="">
+                 <div class="title"></div>
+
+
+                <div class="pris"></div>
+                <a class="kob" href="" target="_blank"><button class="kobet">KØB</button></a>
             </article>
         </template>
+        </div>
 
+        </div>
     </main>
 
     <?php include "footer.html";?>
 
     <script>
 
-        //Event der gør at HTML loades før json loades
+        // der gør at HTML loades før json loades
         document.addEventListener("DOMContentLoaded", getJson);
 
 
         //variabel til at vise alle events
         let allVare;
+
         //variabler der henter template ned fra html
         let vareTarget = document.querySelector(".vare_template");
         let vareOutPut = document.querySelector(".vare");
 
         vareFilter = "alle";
 
-
         //variabel til modal vindue section
         let modal = document.querySelector("#modal");
 
         //henter json fra wordpress
         async function getJson() {
-            let jsonObject = await fetch("http://milleprintzlau.dk/2.semester/styleeditor_site/wordpress/wp-json/wp/v2/shop/");
-            allVare = await jsonObject.json();
-            console.log(allVare);
+            let jsondata = await fetch("http://milleprintzlau.dk/2.semester/styleeditor_site/wordpress/wp-json/wp/v2/shop/");
+
+            allVare = await jsondata.json();
+            console.log(vareFilter);
             visVare();
         }
+
+
+
         //forEach loop til sortering af genre / sorteringsknapperne
         document.querySelectorAll(".menu_item").forEach(knap => {
             knap.addEventListener("click", filtrering);
         })
 
 
+
         //funtion til filtrering
         function filtrering() {
-            vareOutPutOutPut.textContent = "";
-           vareFilterFilter = this.getAttribute("data_kategori");
+            vareOutPut.textContent = "";
+            vareFilter = this.getAttribute("data_kategori");
             visVare();
         }
+
         //function til at vise events
         function visVare() {
-            console.log("visVare" + vareFilter);
-
 
             //upsitedown fra wordpress
             allVare.reverse();
-            allVare.forEach(varen => {
+            allVare.forEach(vare => {
                 //if statement til filtreringen
-                if (vareFilter == varen.acf.genre) {
+                if (vareFilter == vare.acf.genre) {
                     udskriv();
                 } else if (vareFilter == "alle") {
                     udskriv();
                 }
+
 
 
 
@@ -136,50 +317,55 @@
 
                     let klon = vareTarget.cloneNode(true).content;
 
-                    klon.querySelector(".pris").textContent = varen.acf.pris + " kr";
-                    klon.querySelector(".kob").href = varen.acf.kob;
+    klon.querySelector(".pris").textContent = vare.acf.pris + " kr";
+    klon.querySelector(".kob").href = vare.acf.kob; klon.querySelector(".title").textContent = vare.title.rendered;
+    klon.querySelector(".image").src = vare.acf.image;
 
-                    klon.querySelector(".title").textContent = varen.title.rendered;
-                    klon.querySelector(".image").src = varen.acf.image;
 
-// når man klikker på følgende elementer går man videre til modal
-                    klon.querySelector(".image").addEventListener("click", () => {
-                        visModal(event);
-                    })
-                    klon.querySelector(".title").addEventListener("click", () => {
-                        visModal(varen);
+
+
+//når man klikker på følgende elementer går man videre til modal
+    klon.querySelector(".image").addEventListener("click", () => {
+    visModal(varen);
                     })
 
-
-
-                  vareOutPut.appendChild(klon);
+    vareOutPut.appendChild(klon);
                 }
-            })
+          })
         }
 
-
-        //modal vindue function
-        function visModal(vare) {
-
+      //  modal vindue function
+        function visModal(varen) {
 
             console.log("visModal");
+
             modal.classList.add("vis");
-            modal.querySelector(".modal_navn").textContent = vare.title.rendered;
 
-            modal.querySelector(".modal_image").src = vare.acf.image
 
-            modal.querySelector(".modal_pris").textContent = vare.acf.pris + " Kr.";
-            modal.querySelector(".modal_langbeskrivelse").innerHTML = vare.content.rendered;
 
-            modal.querySelector(".kob").href = vare.acf.kob;
+            modal.querySelector(".modal_image").src = varen.acf.image;
 
-            modal.querySelector(".modal_close").addEventListener("click", skjulModal);
+            modal.querySelector(".modal_navn").textContent = varen.title.rendered;
+
+            modal.querySelector(".modal_langbeskrivelse").innerHTML = varen.content.rendered;
+
+            modal.querySelector(".modal_pris").textContent = varen.acf.pris + " Kr.";
+
+            modal.querySelector(".kob").href = varen.acf.kob;
+
+    modal.querySelector(".modal_close").addEventListener("click", skjulModal);
         }
+
+
         //function til at skjule modal igen når man trykker på .modal_close
+
+
         function skjulModal() {
             console.log("skjulModal");
             modal.classList.remove("vis");
         }
     </script>
+
+
 </body>
 </html>
