webshop -mangler HR tag

--- a/webshop.html
+++ b/webshop.html
@@ -16,12 +16,12 @@
             display: block;
         }
 
-        h1{
+    h1{
             font-family: 'Heebo', sans-serif;
           font-weight: 300;
           color: rgba(0, 0, 0, 0.56);
           text-decoration: none;
-        font-size: 1.2em;
+        font-size: 1.3em;
 
         }
 
@@ -36,7 +36,7 @@
     hr{
             background-color: #0B584D;
             padding: 1px;
-            width: 27%;
+
             position: absolute;
 
             margin-top: 20px;
@@ -48,7 +48,7 @@
     .image{
 
               width: 90%;
-              margin-top: 30px;
+              margin-top: 15px;
             margin-left: 10px;
 
           }
@@ -57,12 +57,10 @@
 /*   NAVIGATION*/
 
 
-
     .column1 {
     float: left;
-         margin-right: 5px;
-
-    font-size: 1.3em;
+    margin-right: 5px;
+    font-size: 1em;
 
 
 
@@ -103,15 +101,13 @@
 
     /* PRODUKTER*/
 
-        .vare_container{
+    .vare_container{
             font-family: 'Heebo', sans-serif;
-             background-color: red;
             display: inline-table;
 
         }
 
-
-            .column {
+    .column {
             float: left;
             width: 50%;
             margin-top: -9px;
@@ -125,8 +121,7 @@
 
 }
 
-
-        .pris{
+    .pris{
 
           font-weight: 300;
           color: rgba(0, 0, 0, 0.56);
@@ -135,12 +130,11 @@
             text-align: center;
         }
 
-        .kob{
+    .kob{
             text-decoration: none;
         }
 
-
-        .kobet{
+    .kobet{
         font-family: 'Heebo', sans-serif;
         font-weight: 300;
         font-size: 1.2em;
@@ -158,9 +152,9 @@
             margin-bottom: 0.4em;
         }
 
-        .title{
-            text-align: center;
-             font-family: 'Heebo', sans-serif;
+    .title{
+        text-align: center;
+        font-family: 'Heebo', sans-serif;
         font-weight: 600;
 
 
@@ -172,7 +166,7 @@
 
 
 
-         @media screen and (min-width:563px){
+    @media screen and (min-width:563px){
            .column1{
                     margin-right: 5px;
             }
@@ -181,20 +175,20 @@
 
             height: 700px;
             width: 250px;
-            font-size: 1em;
+            font-size: 1.3em;
 
         }
 
 
                hr{
 
-            width: 35%;
+
 
 
 
         }
              .column{
-                 column-count: 1;
+
 
             width: 50%;
 
@@ -212,7 +206,7 @@
 
 
 
-         @media screen and (min-width:692px){
+     @media screen and (min-width:692px){
            .column1{
                     margin-right: 25px;
             }
@@ -221,14 +215,14 @@
 
             height: 700px;
             width: 250px;
-            font-size: 1em;
+            font-size: 1.3em;
 
         }
 
 
                hr{
 
-            width: 35%;
+
 
 
 
@@ -255,14 +249,13 @@
 
 
             .column1{
-                         margin-right: 50
-                             px;
+                         margin-right: 50px;
             }
 
             .column{
                  column-count: 2;
 
-            width: 60%;
+            width: 50%;
 
 
             }
@@ -270,7 +263,7 @@
 
                 hr{
 
-            width: 20%;
+
 
 
         }
@@ -286,7 +279,7 @@
 
 
 
-        @media screen and (min-width:1200px){
+        @media screen and (min-width:1000px){
 
 
             .column1{
@@ -307,7 +300,6 @@
 
                 hr{
 
-            width: 23%;
 
 
         }
@@ -315,7 +307,7 @@
            #sorteringsknapper{
 
             height: 700px;
-            width: 400px;
+            width: 250px;
 
         }
         }
@@ -371,7 +363,7 @@
 
             </div>
 
-            <hr>
+             <hr width="15%">
             <br>
             <br>
             <p>Shoppen foregår over mail, det betyder at køb knappen henviser til Anettes Thyrsteds mail. Skriv til Anette hvis du gerne vil købe varen.</p>
