--- a/single_boligstyling.html
+++ b/single_boligstyling.html
@@ -15,6 +15,7 @@
 
         <section class="singleContainer">
             <article class="home">
+               <a href="boligstyling.html"><button class="tilbage">TILBAGE</button></a>
                 <h2 class="data-navn"></h2>
                 <p class="data-langbeskrivelse"></p>
             </article>
