--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <?php include "header.html";?>
 
     <div class="slideshow">
 
@@ -74,6 +75,8 @@
         </template>
 
     </main>
+
+    <?php include "footer.html";?>
 
 
 
